# redrevolt

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  run.sh
base/res/: music.lua  sounds.lua  sprites.lua  texts.lua  textures.lua
base/scripts/: class.lua  hotkeys.lua  init.lua  main.lua  ui_builder.lua
base/scripts/containers/: console_panel.lua  edit_entity_dialog.lua  inventory_dialog.lua  inventory_slot.lua  map_editor_battlefield.lua  map_editor_edit_panel.lua  map_editor_filters_panel.lua  map_editor_info_panel.lua  map_editor_items_panel.lua  map_editor_selection_panel.lua  map_editor_system_panel.lua  notification_dialog.lua  save_load_dialog.lua  system_tools.lua
base/scripts/game/: entity_handler.lua  gamedata.lua  map_handler.lua  settings.lua
base/scripts/screens/: loading_screen.lua  main_screen.lua  map_editor_screen.lua  options_screen.lua  test_atlas_screen.lua  test_battlefield_screen.lua  test_fader_screen.lua  test_font_screen.lua  test_primitives_screen.lua  test_screen.lua  test_scroll_screen.lua  test_widgets_screen.lua
base/scripts/utils/: table_ext.lua
maps/: map_01.map
res/base/scripts/: init.lua  main.lua  screens.lua
res/base/scripts/containers/: debug_panel.lua  map_editor_battlefield.lua  map_editor_info_panel.lua
res/base/scripts/game/: map_handler.lua
res/base/scripts/screens/: main_screen.lua  options_screen.lua  start_screen.lua
src/: battlefield.cpp  battlefield.h  config.h.in  console.cpp  console.h  debug_panel.cpp  debug_panel.h  game_data.cpp  game_data.h  loading_screen.cpp  loading_screen.h  main.cpp  main_screen.cpp  main_screen.h  map_editor_battlefield.cpp  map_editor_battlefield.h  map_editor_screen.cpp  map_editor_screen.h  map_editor_system_panel.cpp  map_editor_system_panel.h  map_handler.cpp  map_handler.h  options_screen.cpp  options_screen.h  redrevolt_game.cpp  redrevolt_game.h  screens.h  start_screen.cpp  start_screen.h  system_tools.cpp  system_tools.h  temp.cpp  test_atlas_screen.cpp  test_atlas_screen.h  test_battlefield_screen.cpp  test_battlefield_screen.h  test_dialog.cpp  test_dialog.h  test_fader_screen.cpp  test_fader_screen.h  (+17 more)
src/base/res/: fonts.lua
src/base/scripts/containers/: widget_tree.lua  widget_tree_branch.lua
src/base/scripts/screens/: test_sound_screen.lua
support/atlas/: _atlas.bat  _atlas_script.lua  battlefield_files.lua  ui_files.lua
